--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       <a-entity gltf-model="#balloon" position="0 0 -10" rotation="0 7 0" koo></a-entity>
     </a-scene>
-    <div class="button-wrapper">
+    <!-- <div class="button-wrapper">
       <button
         class="change-btn"
         onclick="
@@ -174,14 +174,14 @@
 
         <span> <img class="right-arr" src="arr-right.svg" alt=">"/></span>
       </button>
-    </div>
+    </div> -->
     <!--
   <div class="button-wrapper-share">
       <img src="shot.svg" class="share-btn" id="shareButton" />
     
     </div>-->
   </body>
-  <div class="page-wrapper">
+  <!-- <div class="page-wrapper">
     <div class="flex-wrapper">
       <div class="top-side">
         <img src="arr1.svg" class="top-arr" />
@@ -192,5 +192,5 @@
         <img src="arr2.svg" class="bot-arr" />
       </div>
     </div>
-  </div>
+  </div> -->
 </html>
