--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <!-- <a-sky src="#skybox"></a-sky> -->
       <!-- <a-light type="ambient" color="#fff" intensity=0.3></a-light> -->
       <!-- <a-light type="directional" color="#666" intensity=0.3 position="0 0 -1"></a-light> -->
-      <a-light type="hemisphere" color="#fff" groundColor="#222" intensity=0.8></a-light>
-
+      <a-light type="hemisphere" color="#fff" groundColor="#222" intensity=0.4></a-light>
+      <a-light type="point" position="10 20 10" angle=0.25 distance=1024 penumbra=0.75 color="#fff" intensity=0.8></a-light>
       <a-entity gltf-model="#balloon" position="0 0 -10" rotation="0 7 0" koo></a-entity>
     </a-scene>
     <!-- <div class="button-wrapper">
